[metadata]
name = sism
author = Marco Bertolini, Tuan Le
author_email = marco.bertolini@pfizer.com, tuan.le@pfizer.com
description = A research module for symmetry-induced score matching
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.10.0
setup_requires =
    setuptools_scm
install_requires =

[mypy]
python_version = 3.10
ignore_missing_imports = True